kubernetes/manifests/networking/traefik/whoami-ingressroute.yaml
# kubernetes/manifests/traefik/whoami-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.homelab.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
